[package]
name = "aoc-2015-rs"
version = "0.1.0"
edition = "2021"


# NOTE: uncomment below to get best performance out of parallelized solutions
# [profile.test]
# opt-level = 3
# lto = true
# codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.8"
md5 = "0.7.0"
rayon = "1.8.0"
